--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
+
 <body>
-    
+    <div class="container mt-5">
+        <div class="jumbotron">
+            <h1 class="display-4">SURVEY</h1>
+            <p class="lead">Weccome to Friend Finder!
+            </p>
+            <hr class="my-4">
+            <p>Click to start your survey!</p>
+            <a class="btn btn-primary btn-md" href="/survey" role="button">Begin</a>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
+        crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery.js"></script>
+    <script type="text/javascript" src="assets/javascript/htmlRoutes.js"></script> -->
 </body>
+
 </html>
