--- a/app/public/home.html
+++ b/app/public/home.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Work+Sans" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container mt-5">
-        <div class="jumbotron">
-            <h1 class="display-4">Friend Finder</h1>
-            <p class="lead">Weccome to Friend Finder!
+    <div class="main-div container">
+            <h1 class="display-4" id='logo'>M I N G L E W I T H</h1>
+            <p class="lead">Click Below to Start your Survey!
             </p>
-            <hr class="my-4">
-            <p>Click to start your survey!</p>
-            <a class="btn btn-primary btn-md" href="/survey" role="button">Begin</a>
-        </div>
+            <p>Please answer the following questions as honestly as possible.</p>
+            <p>1 = Strongly Agree</p>
+            <p>5 = Strongly Disagree</p>
+            <a class="btn btn-secondary btn-md" href="/survey" role="button">Begin</a>
     </div>
 
 
@@ -34,6 +35,8 @@
 
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
         crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery.js"></script>
+        <script type="text/javascript" src="./app.js"></script>
 </body>
 
 </html>
