pushing final files up

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -16,12 +16,14 @@
             <h1 class="display-4" id='logo'>M I N G L E W I T H</h1>
             <p class="lead">Click Below to Start your Survey!
             </p>
-            <p>Please answer the following questions as honestly as possible.</p>
-            <p>1 = Strongly Agree</p>
-            <p>5 = Strongly Disagree</p>
+            <p>Please answer the following questions as honestly as possible to find your friend match.</p>
             <a class="btn btn-secondary btn-md" href="/survey" role="button">Begin</a>
-    </div>
 
+    </div>
+    
+    <div class="footer container mt-5">
+        <a href="/api/friends">API Friends List</a>
+    </div>
 
 
 
